# nostrstore

./: Cargo.toml  README.md  copy.env
nostrstore/: Cargo.toml  README.md
nostrstore-derive/: Cargo.toml
nostrstore-derive/src/: lib.rs
nostrstore/src/: error.rs  lib.rs
nostrstore/src/database/: core.rs
nostrstore/src/operation/: append_only.rs  mod.rs
src/: client.rs  db.rs  error.rs  event_stream.rs  lib.rs  main.rs  utils.rs
src/client/: db.rs  mod.rs
src/database/: builder.rs  core.rs  mod.rs  query.rs  record.rs
src/operation/: append_only.rs  counter.rs  mod.rs
tests/: Cargo.toml
