[package]
name = "nostr-db"
version = "0.1.0"
edition = "2024"


[dependencies]
nostr-sdk = { version = "0.40", features = ["nip44"] }
thiserror = "2.0.12"
tokio =  { version = "1.44.2", features = ["fs"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"


