[package]
name = "nostrstore"
version = "0.1.0"
edition = "2024"

description = "A simple key-value CRDT-like database over the Nostr protocol"
repository = "https://github.com/unldenis/nostr-db"
readme = "README.md"
authors = ["Denis Mehilli <mehillideny13@gmail.com>"]
keywords = ["nostr", "crdt", "database", "p2p"]
categories = ["data-structures", "database", "network-programming"]

[dependencies]
nostr-sdk = { version = "0.40", features = ["nip44"] }
thiserror = "2.0.12"
tokio =  { version = "1.44.2", features = ["fs"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"


