[package]
name = "nostrstore-derive"
version = "0.1.1"
edition = "2024"

description = "nostrstore is a lightweight, decentralized key-value store designed to work seamlessly with the Nostr protocol"
repository = "https://github.com/unldenis/nostrstore"
readme = "../README.md"
authors = ["Denis Mehilli <mehillideny13@gmail.com>"]
keywords = ["nostr", "database", "p2p"]
categories = ["data-structures", "database", "network-programming"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"